# meshai-schedule-extract

./: .gitignore  README.md  config.py  extract_shifts.py  logger.py  logging.py  main.py  pyproject.toml  session.py  setup.sh
agents/: csv_agent.py  decision_agent.py  png_agent.py  png_csv_agent.py  post_processing_agent.py
data/: .~lock.13.xlsx#  .~lock.14.xlsx#  .~lock.18.xlsx#  1.xlsx  11.xlsx  12.xls  13.xlsx  14.xlsx  15.xlsx  16.xlsx  17.xlsx  18.xlsx  19.xlsx  2.docx  3.xls  8.docx  9.docx
excel_csv/12/: On Call.csv
excel_csv/13/: 2021 Block 11.csv  2021 Block 12.csv
excel_csv/15/: Sheet1.csv
excel_csv/16/: May 20-August 11.csv
excel_csv/18/: Aug.csv  Jan.csv  Jul.csv  Lookup List.csv  Mar.csv  Sep.csv
excel_csv/19/: APR - JUN.csv
excel_csv/3/: Février.csv  Juin.csv  Mars.csv  hres hebd.csv
file_conversion/: doc_to_csv.py  doc_to_pdf.py  excel_to_csv.py  excel_to_png.py  pdf_to_png.py
testing/: compare_script.py  csv_agent.py  csv_agent_test_results.json  file_conversion.py  png_csv_agent.py  png_csv_agent_test_results.json
testing/input_dataset/csv/: 11_Sheet1.csv  12_OR.csv  13_2021_BLOCK_3.csv  13_2021_BLOCK_6.csv  13_2021_BLOCK_8.csv  13_2021_Block_1.csv  13_2021_Block_10.csv  13_2021_Block_13.csv  13_2021_Block_2.csv  13_2021_Block_4.csv  13_2021_Block_9.csv  13_2021_block_5.csv  13_Block7.csv  13_Block_-11.csv  13_Block_1.csv  13_Block_10.csv  13_Block_12.csv  13_Block_13.csv  13_Block_2.csv  13_Block_3.csv  13_Block_4.csv  13_Block_5.csv  13_Block_6.csv  13_Block_7.csv  17_Sheet1.csv  (+13 more)
testing/output_dataset/: 10.json  11.json  17.json
(+9 files in other folders)
