[project]
name = "meshai-schedule-extract"
version = "0.1.0"
description = "Script to extract shift information from PDF or PNG files using OpenRouter API"
authors = [
    {name = "Conrad", email = "conrad@example.com"},
]
dependencies = [
    "requests",
    "pdf2image",
    "aiohttp",
    "aiofiles",
    "Pillow",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []